# dmarcontrol

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  THIRD_PARTY_NOTICES.md  docker-compose.yml
.github/workflows/: docker-image.yml
src/: app.rs  auth.rs  dmarc.rs  error.rs  geoip.rs  importer.rs  insights.rs  mailbox.rs  main.rs  scheduler.rs  store.rs  web.rs
static/: app.css  app.js  index.html  login.html
