[package]
name = "dmarcontrol"
version = "0.1.0"
edition = "2021"
description = "Self-hosted DMARC aggregate report viewer"
license = "MIT"

[dependencies]
axum = { version = "0.7", features = ["multipart"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
imap = "2.4"
mailparse = "0.15"
maxminddb = "0.29"
native-tls = "0.2"
openssl = "0.10"
percent-encoding = "2"
quick-xml = { version = "0.37", features = ["serialize"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_urlencoded = "0.7"
thiserror = "2"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "fs", "sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
zip = "2"
